修复查询语句执行漏洞